MyCloudCode/src/less/signin_page.less
.user-signin-card {
	background-size: 15em;
	background-repeat: no-repeat;
	background-position: center center;
	line-height: 10em;
	border-radius: 50%;
	width: 10em;
	height: 10em;
	color: white;
	font-size: 1.5em;
	text-shadow: 2px 1px #050505;
	margin: 1em auto;
	text-align: center;
}

.wechat-welcome-message {
	font-size: 1.3em;
	color: #ED9501;
	margin: 1em auto 0 auto;
}

.sign-area {
  text-align: center;
  max-width: 500px;
  margin: 0 auto 20px auto;
  padding: 0 0 20px 0;
}

.signup-welcome-msg {
    text-align: center;
}

.signup-input {
    margin: 10px auto;
}

.signup-input-row {
	width: 80%;
	margin: 0.2em auto;
	box-shadow: 1px 5px 5px #888888;
	border-radius: 1px;
	color: #ED9501;
	input {
		border: none;
		color: black;
		margin-bottom: 2px;
		width: 80%;
	}
}

.signup-button-container {
	margin-top: 2em;
	.signup-button {
		color: white;
		background-color: #ED9501;
		margin-left: 55%;
		width: 20%;
		font-size: 1.3em;
		border-style: none;
		box-shadow: 0px 5px 5px #808080;
		letter-spacing: 0.1em;
	}
}

.signin-welcome-msg {
    text-align: center;
    margin: 15% auto; 
    color: #E06023;
    font-family: Georgia, "Times New Roman", "Microsoft YaHei", serif;
}

.signin-inputs {
	.signin-input-row {
		input {
			width: 90%;
			line-height: 2em;
			background-color: #EDEDED;
			border: 0 inset;
			margin-bottom: 1px;
			border-color: #888888;
			box-shadow: 0px 5px 5px #888888;
		}
	}
}

.signin-button-container {
	margin-top: 2em;
	.signin-button {
		width: 90%;
		font-size: 1.3em;
		border-style: none;
		box-shadow: 0px 5px 5px #808080;
		letter-spacing: 0.1em;
		background-color: #A4A4A4;
		font-weight: bold;
		line-height: 2em;
	}
}

.login-reference,
.signup-reference {
	position: absolute;
	right: 10%;
	bottom: 2%;
}

#email-confirm-modal {
	position: absolute;
	top: 20%;
	margin: 5%;
	.modal-body {
		font-size: 1.2em;
	}
}

